Avoid crash by checking for pattern.

BUG:427866